Se agrega "message" para permiso de camara

--- a/PlatziTweets/Modules/Home/Home.storyboard
+++ b/PlatziTweets/Modules/Home/Home.storyboard
@@ -71,7 +71,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ff5-Gd-1fg">
-                                <rect key="frame" x="20" y="117" width="374" height="187"/>
+                                <rect key="frame" x="20" y="117" width="374" height="237"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1gK-uu-Drz">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="120"/>
@@ -84,8 +84,15 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Roe-nR-s1Z">
+                                        <rect key="frame" x="0.0" y="140" width="374" height="30"/>
+                                        <state key="normal" title="Abrir cámara"/>
+                                        <connections>
+                                            <action selector="openCameraAction" destination="0IP-6e-ddj" eventType="touchUpInside" id="kxU-Lb-eIv"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpc-Dg-G6t">
-                                        <rect key="frame" x="0.0" y="140" width="374" height="47"/>
+                                        <rect key="frame" x="0.0" y="190" width="374" height="47"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="47" id="Qvj-BY-i5A"/>
@@ -98,6 +105,12 @@
                                             <action selector="addPostAction" destination="0IP-6e-ddj" eventType="touchUpInside" id="Fhn-A3-Awh"/>
                                         </connections>
                                     </button>
+                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nCO-lI-PJ3">
+                                        <rect key="frame" x="0.0" y="237" width="374" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="3pm-BM-0xx"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottomImage" translatesAutoresizingMaskIntoConstraints="NO" id="cJr-Ol-ZD1">
@@ -125,6 +138,7 @@
                     </view>
                     <connections>
                         <outlet property="postTextView" destination="1gK-uu-Drz" id="7hO-cm-eAo"/>
+                        <outlet property="previewImageView" destination="nCO-lI-PJ3" id="Oqg-II-eQ3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="75P-1U-RoZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
